# applygraph

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  otel-collector-config.yaml  pyproject.toml
app/: main.py
app/api/: deps.py
app/core/: config.py
app/db/: models.py  session.py
app/schemas/: api.py
app/services/: chat_planner.py  job_analysis.py  llm.py  memory.py  outreach.py  resume.py
app/telemetry/: metrics.py  tracing.py
app/tools/: base.py  job_parser.py  memory_retriever.py  outreach_drafter.py  profile_reader.py
app/workflows/: job_copilot_graph.py  state.py
backend/: main.py
backend/api/: deps.py
backend/core/: config.py
backend/db/: models.py  session.py
backend/schemas/: api.py
backend/services/: chat_planner.py  chat_sessions.py  job_analysis.py  llm.py  memory.py  outreach.py  resume.py
backend/telemetry/: metrics.py  tracing.py
backend/tools/: base.py  job_parser.py  memory_retriever.py  outreach_drafter.py  profile_reader.py
backend/workflows/: job_copilot_graph.py  state.py
docs/: README.md  api.md  architecture.md  evals.md  frontend.md  observability.md
evals/: judge.py  run_evals.py
evals/baselines/: latest.json
evals/cases/: analyze_job_ambiguous_fit.json  analyze_job_fastapi_fit.json  analyze_job_greeting_then_fit.json  analyze_job_incomplete_jd.json  analyze_job_weak_profile.json  draft_message_cold_tone.json  draft_message_dm_only.json  draft_message_email_named_manager.json  (+13 more)
frontend/: __init__.py  app.py  models.py  rendering.py  state.py  ui.py
tests/: test_api_flows.py
(+12 files in other folders)
